# OOP-lab

./: .gitignore  CMakeLists.txt  README.md  ScootersData.csv  UserData.csv  app.cpp  compile.sh  scooters.txt
.github/workflows/: cmake.yml
controller/: Controller.cpp  Controller.h  scooters.txt
domain/: Domain.cpp  Domain.h
gui/: MainWindow.h  mainwindow.cpp  mainwindow.h
repository/: Repository.cpp  Repository.h
test/: Test.cpp  Test.h
ui/: Console.cpp  Console.h
